package fit.iuh.student.communicationservice.enums;

public enum RoomStatus {
    CREATED, ACTIVE, INACTIVE
}
