package fit.iuh.student.healthrecordservice.enums;

public enum Frequency {
    MORNING,AFTERNOON, EVENING
}
