package fit.iuh.student.schedulingservice.enums;

public enum ConsultationType {
    ALL,
    DIRECT_CONSULTATION,    // Khám trực tiếp
    ONLINE_CONSULTATION,    // Tư vấn trực tuyến
    LAB_TEST,              // Xét nghiệm
    FOLLOW_UP              // Tái khám
}
