package fit.iuh.student.userservice.enums;

public enum AllergyLevel {
    LOW,
    MEDIUM,
    HIGH
}
