package fit.iuh.student.userservice.enums;

public enum Gender {
    MALE, FEMALE, OTHER
}