package fit.iuh.student.userservice.enums;

public enum Role {
    PATIENT, DOCTOR, ADMIN
}
