package fit.iuh.student.userservice.enums;

public enum Status {
    ACTIVE, INACTIVE, BLOCKED
}