package fit.iuh.student.userservice.enums;

public enum StatusHealth {
    DECREASING, INCREASING, STABLE, IMPROVING,
}
